objects/Ranking__c.object
<CustomObject>
    <fields>
        <fullName>AverageStarRatingNumber__c</fullName>
        <formula>SumOfAllStarRatingsNumber__c /  NumberOfReviews__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AverageStarRatingNumber</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfReviews__c</fullName>
        <label>NumberOfReviews</label>
        <summaryForeignKey>ProcedureReview__c.ProcedureRanking__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SumOfAllStarRatingsNumber__c</fullName>
        <label>SumOfAllStarRatingsNumber</label>
        <summarizedField>ProcedureReview__c.RatingAsNumber__c</summarizedField>
        <summaryForeignKey>ProcedureReview__c.ProcedureRanking__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>ProcedureRanking</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PR-{00000000}</displayFormat>
        <label>Ranking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ProcedureRankings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>